corrected data structures